conformance/1.0.0-beta/expected/errors/unclosed-annotation.cdx
<ExpectedError category=~syntax reason=~gloss-syn-unclosed-annotation/>
